# engram

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/engram-learn/: SKILL.md
.claude/skills/engram-memory/: SKILL.md
.claude/skills/engram-objective/: SKILL.md
.claude/skills/engram-plan/: SKILL.md
.engram/: config.toml
.engram/memory/: architecture.md  index.md  patterns.md  tripwires.md
.engram/memory/architecture/: claude-md-should-hold-only-structural-pointers-path-refs-all.md  inject-project-specific-rules-into-the-claude-prompt-as-a-de.md  memory-index-self-routing.md  multi-step-workflow-commands-land-learn-close-issue-delete-b.md  resolve-the-github-repo-in-every-command-by-checking-config-.md  the-canonical-engram-prerequisite-set-is-git-repo-present-gh.md  yaml-frontmatter-for-ai-navigable-docs.md
.engram/memory/patterns/: auto-migrate-on-init.md  batch-branch-creation-return-to-base.md  branch-naming-conventions-for-engram-land-cleanup.md  bumpers-not-blocks-validation.md  check-resource-state-before-mutating-it-e-g-check-issue-stat.md  cmd-status-branch-issue-number-heuristic.md  completion-label-as-idempotency-marker.md  compose-higher-level-workflow-commands-by-calling-existing-c.md  compute-human-readable-issue-age-today-1-day-ago-n-days-ago-.md  define-health-checks-as-a-slice-of-str-box-dyn-fn-bool-tuple.md  (+28 more)
.engram/prompt-hooks/: README.md
.github/ISSUE_TEMPLATE/: engram-plan.md
.github/workflows/: ci.yml
src/: claude.rs  cli.rs  compact.rs  config.rs  github.rs  learn.rs  main.rs  memory.rs  objective.rs  plan.rs
(+12 files in other folders)
