[package]
name = "engram"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engram"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
include_dir = { version = "0.7", features = ["glob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
